--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Inter';
-  src: url('/assets/fonts/static/Inter_18pt-Thin.ttf') format('truetype');
+  src: url('./../public/assets/fonts/static/Inter_18pt-Thin.ttf') format('truetype');
   font-weight: 100;
   font-style: normal;
   font-display: swap;
@@ -8,7 +8,7 @@
 
 @font-face {
   font-family: 'Inter';
-  src: url('/assets/fonts/static/Inter_18pt-ExtraLight.ttf') format('truetype');
+  src: url('./../public/assets/fonts/static/Inter_18pt-ExtraLight.ttf') format('truetype');
   font-weight: 200;
   font-style: normal;
   font-display: swap;
@@ -16,7 +16,7 @@
 
 @font-face {
   font-family: 'Inter';
-  src: url('/assets/fonts/static/Inter_18pt-Light.ttf') format('truetype');
+  src: url('./../public/assets/fonts/static/Inter_18pt-Light.ttf') format('truetype');
   font-weight: 300;
   font-style: normal;
   font-display: swap;
@@ -24,7 +24,7 @@
 
 @font-face {
   font-family: 'Inter';
-  src: url('/assets/fonts/static/Inter_18pt-Regular.ttf') format('truetype');
+  src: url('./../public/assets/fonts/static/Inter_18pt-Regular.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -32,7 +32,7 @@
 
 @font-face {
   font-family: 'Inter';
-  src: url('/assets/fonts/static/Inter_18pt-Medium.ttf') format('truetype');
+  src: url('./../public/assets/fonts/static/Inter_18pt-Medium.ttf') format('truetype');
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -40,7 +40,7 @@
 
 @font-face {
   font-family: 'Inter';
-  src: url('/assets/fonts/static/Inter_18pt-SemiBold.ttf') format('truetype');
+  src: url('./../public/assets/fonts/static/Inter_18pt-SemiBold.ttf') format('truetype');
   font-weight: 600;
   font-style: normal;
   font-display: swap;
@@ -48,7 +48,7 @@
 
 @font-face {
   font-family: 'Inter';
-  src: url('/assets/fonts/static/Inter_18pt-Bold.ttf') format('truetype');
+  src: url('./../public/assets/fonts/static/Inter_18pt-Bold.ttf') format('truetype');
   font-weight: 700;
   font-style: normal;
   font-display: swap;
@@ -56,7 +56,7 @@
 
 @font-face {
   font-family: 'Inter';
-  src: url('/assets/fonts/static/Inter_18pt-ExtraBold.ttf') format('truetype');
+  src: url('./../public/assets/fonts/static/Inter_18pt-ExtraBold.ttf') format('truetype');
   font-weight: 800;
   font-style: normal;
   font-display: swap;
@@ -64,7 +64,7 @@
 
 @font-face {
   font-family: 'Inter';
-  src: url('/assets/fonts/static/Inter_18pt-Black.ttf') format('truetype');
+  src: url('./../public/assets/fonts/static/Inter_18pt-Black.ttf') format('truetype');
   font-weight: 900;
   font-style: normal;
   font-display: swap;
