feat: signup message is displayed when signup form is successfully filled out and send

--- a/src/app/features/landing-page/sign-up/sign-up.html
+++ b/src/app/features/landing-page/sign-up/sign-up.html
@@ -75,4 +75,11 @@
             </button>
         </form>
     </div>
+    @if (showSuccessMessage) {
+        <div class="success-overlay">
+            <div class="success-message">
+                You Signed Up successfully
+            </div>
+        </div>
+        }
 </div>
