--- a/src/app/features/landing-page/log-in/log-in.html
+++ b/src/app/features/landing-page/log-in/log-in.html
@@ -70,7 +70,7 @@
             <div class="button-group">
                 <button type="button" class="btn-primary" (click)="onLogin()" [disabled]="isLoading">
                     @if (isLoading) {
-                    <span>Logging in...</span>
+                    <span>Log in</span>
                     } @else {
                     <span>Log in</span>
                     }
