--- a/frontend/src/app/features/landing-page/log-in/log-in.html
+++ b/frontend/src/app/features/landing-page/log-in/log-in.html
@@ -34,23 +34,16 @@
 
 
                     <div class="error-message">
-                        @if (capsLockOn && !passwordError) {
+                        @if (capsLockOn && !errorMessage) {
                         <span class="warning-message"> Caps Lock is on</span>
                         }
-                        @if (passwordError) {
-                        <span>{{ passwordError }}</span>
+                        @if (errorMessage) {
+                        <span>{{ errorMessage }}</span>
                         }
                     </div>
                 </div>
 
-                @if (errorMessage) {
-                <div class="general-error">
-                    {{ errorMessage }}
-                </div>
-                <div class="general-error">
-                    {{ errorMessage }}
-                </div>
-                }
+                
 
                 <div class="button-group">
                     <button type="button" class="btn-primary" (click)="onLogin()" [disabled]="isLoading">
